Modified POM. Removed Target folder from git